# Atlas

./: .env.example  .gitignore  ARCHITECTURE.md  EVALUATION.md  README.md  UNIT_TESTS.md  agents.md  progress.md  pyproject.toml
agents/: analyst.py  memory.py  orchestrator.py  retriever.py  verifier.py
docs/: compliance_manual.txt  policy_hr.txt  sop_onboarding.txt
evaluation/: logger.py
graph/: workflow.py
guardrails/: checks.py
lib/: __init__.py  api_errors.py  document_classifier.py  query_rewriter.py
tests/: test_guardrails.py  test_memory.py  test_query_rewriter.py  test_retriever.py  test_verifier_helpers.py
ui/: app.py
vector_store/: ingest.py
