[project]
name = "enterprise-knowledge-ops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langgraph>=1.2.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
